# CSGauntlet

./: ._README.md  .dockerignore  .gitignore  BACKEND_COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOY_INSTANTLY.md  DEPLOY_LIVE_NOW.md  DEPLOY_NOW.md  DRAG_AND_DROP_DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  GAME_FUNCTIONALITY_STATUS.md  GITHUB_READY_CHECKLIST.md  GITHUB_SETUP_NORMBOY1.md  LAUNCH_CHECKLIST.md  LAUNCH_GUIDE.md  LICENSE  MANUAL_GITHUB_SETUP.md  ONLINE_NOW.md  PROJECT_STRUCTURE.md  README.md  README_GITHUB.md  READY_TO_DEPLOY.md  SECURITY.md  SECURITY_STATUS.md  SETUP_AND_TEST.md  VERIFIED_WORKING.md  WHATS_INCLUDED.md  deploy_production.py  deploy_to_normboy1.bat  docker-compose.yml  git_commands.md  launch_cs_gauntlet.py  netlify.toml  package-lock.json  package.json  push_to_github.bat  quick_deploy.bat  requirements.txt  setup.sh  (+9 more)
backend/: .dockerignore  .env.example  MANIFEST.in  __init__.py  app.py  celery_app.py  check_users.py  config.py  launch_dev.py  manage.py  pyproject.toml  requirements.txt  requirements_basic.txt  requirements_lite.txt  requirements_minimal.txt  requirements_security.txt  run.py  run_enhanced.py  setup.py  simple_app.py  simple_db_check.py  simple_dev_server.py  tasks.py  test_game_functionality.py  test_ollama_integration.py  test_server.py
backend/backend/: MANIFEST.in  __init__.py  ai_grader.py  api_security.py  app.py  audit_logger.py  auth.py  code_executor.py  cors_config.py  database_security.py  enhanced_app.py  game_api.py  game_integrity.py  game_manager.py  game_socket_handlers.py  main.py  middleware.py  (+24 more)
(+64 files in other folders)
