[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-cs-gauntlet"
version = "1.0.0"
description = "Competitive programming game with AI evaluation"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/yourusername/the-cs-gauntlet"

[tool.setuptools]
packages = ["backend"]
include-package-data = true
